# eventastic

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.sqlx/: query-5a4e3a00b4e5b821aaea0a83a34a261351760cbffd130fe1615963f5c1dcfe0a.json  query-5e0d7c0dc252fdf4005975f5f04ef21c0fd92505270dacd010d3989e39c729f5.json  query-84dc357949be6678dbd96d0b447b471f0c2c70af37a0ef9aa6d6b402af3a9ac8.json  query-a2a825dc3ee16be0824a4b8969c4f0062143f33e996b5c1b8af6a5730a928a9b.json
eventastic/: Cargo.toml
eventastic/src/: aggregate.rs  event.rs  lib.rs  repository.rs
eventastic/src/aggregate/: repository.rs  root.rs
eventastic_postgres/: Cargo.toml
eventastic_postgres/migrations/: 20230610185630_init.sql
eventastic_postgres/src/: lib.rs  outbox.rs  repository.rs  transaction.rs
eventastic_postgres/tests/: postgres.rs  snapshots.rs  validation.rs
eventastic_postgres/tests/common/: helpers.rs  mod.rs  test_aggregate.rs
examples/bank/: Cargo.toml
examples/bank-accounting/: Cargo.toml
examples/bank/src/: main.rs
scripts/: postgres.sh
