[package]
name = "eventastic"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jdon/eventastic"
description = "Eventastic is an opinionated fork of Eventually-rs. It enforces the use of transactions and handles idempotency."
categories = [
	"rust-patterns",
	"web-programming",
	"asynchronous",
	"data-structures",
]
keywords = ["architecture", "ddd", "event-sourcing", "cqrs", "es"]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
