[package]
name = "eventastic_postgres"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/jdon/eventastic"
description = "An example postgres event store for eventastic"
categories = ["web-programming", "asynchronous"]
keywords = ["postgres", "postgresql", "database", "ddd", "event-sourcing"]

[dependencies]
chrono = { workspace = true }
eventastic = { path = "../eventastic" }
sqlx = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
