[package]
name = "eventastic_postgres"
version = "0.5.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jdon/eventastic"
description = "A postgres event store for eventastic"
categories = ["web-programming", "asynchronous"]
keywords = ["postgres", "postgresql", "database", "ddd", "event-sourcing"]

[dependencies]
chrono = { workspace = true }
eventastic = { path = "../eventastic", version = "0.5" }
sqlx = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }