[package]
name = "bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventastic = { path = "../../eventastic" }
eventastic_postgres = { path = "../../eventastic_postgres" }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
